# Veriq

./: .env.example  .gitignore  README.md  docker-compose.yml  postgres.env.example
.claude/: README.md
.claude/agents/: ai-feature.md  api-route.md  auth.md  code-review.md  database.md  docker.md  fastapi-route.md  github-issue.md  migration.md  payments.md  planning.md  research.md  security-audit.md  testing.md  ui-component.md
.github/agents/: ai-feature.agent.md  api-route.agent.md  auth.agent.md  code-review.agent.md  database.agent.md  docker.agent.md  engineering-standards.skill.md  fastapi-route.agent.md  migration.agent.md  payments.agent.md  security-audit.agent.md  testing.agent.md  ui-component.agent.md
.github/skills/: ai-integration.skill.md  api-contracts.skill.md  design-system.skill.md  docker.skill.md  engineering-standards.skill.md  error-handling.skill.md  nextjs.skill.md  payments.skill.md  postgresql.skill.md  prisma.skill.md  python.skill.md  security.skill.md
.github/workflows/: codeql.yml  gitguardian.yml  playwright.yml
.husky/: pre-push
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  main.py
backend/app/api/: debug.py  health.py
backend/app/core/: config.py  logging.py  middleware.py  rate_limit.py
backend/tests/: test_auth.py  test_debug.py  test_health.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  instrumentation-client.ts  instrumentation.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  prisma.config.ts  proxy.ts  tsconfig.json  vitest.config.ts
frontend/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/e2e/: dashboard.spec.ts  pricing.spec.ts  smoke.spec.ts
frontend/hooks/: use-reduced-motion.ts  use-report-download.ts
frontend/lib/: advisor-insights.ts  ai-sanitize.ts  ai.ts  api-error.ts  cn.ts  connect-flow.ts  dashboard-data.ts  db.ts  env.ts  error-envelope.ts  income-calculators.test.ts  income-calculators.ts  income-math.ts  logger.ts  monthly-bars.ts  motion.ts  plan-limits.ts  plans.ts  (+8 more)
(+120 files in other folders)
