[project]
name = "veriq-backend"
version = "0.1.0"
description = "Veriq FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "python-jose[cryptography]>=3.3",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.17",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "anyio>=4.6",
    "httpx>=0.27",
    "types-python-jose>=3.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's `Depends(...)` / `Security(...)` default-arg pattern is the framework's own
# dependency-injection mechanism, not the mutable-default footgun B008 targets.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Security"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
